--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -43,12 +43,22 @@
 border: none;
 }
 
-QToolButton{
-border: none;
-background-color: rgba(255, 255, 255,0);
+QPushButton, QToolButton { 
+border:none;
+qproperty-iconSize: 24px;
+width:50px;
+height:50px;
+cursor: pointer;
+ }
+
+QPushButton:hover, QToolButton:hover {
+cursor: pointer;
+border-radius: 5px;
+background-color: #b3cccc;
 }
 
-QToolButton::menu-indicator { image: none; }</string>
+QToolButton::menu-indicator { image: none; }
+</string>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0,0,0,0,0,0">
        <property name="spacing">
@@ -146,8 +156,8 @@ QToolButton::menu-indicator { image: none; }</string>
          </property>
          <property name="iconSize">
           <size>
-           <width>22</width>
-           <height>22</height>
+           <width>24</width>
+           <height>24</height>
           </size>
          </property>
          <property name="checkable">
@@ -363,7 +373,26 @@ QToolButton::menu-indicator { image: none; }</string>
        </sizepolicy>
       </property>
       <property name="styleSheet">
-       <string notr="true">border: none;</string>
+       <string notr="true">QGroupBox {
+border: none;
+}
+
+QPushButton, QToolButton { 
+border:none;
+qproperty-iconSize: 24px;
+width:50px;
+height:50px;
+cursor: pointer;
+ }
+
+QPushButton:hover, QToolButton:hover {
+cursor: pointer;
+border-radius: 5px;
+background-color: #b3cccc;
+}
+
+QToolButton::menu-indicator { image: none; }
+</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
@@ -415,10 +444,7 @@ QToolButton::menu-indicator { image: none; }</string>
           <enum>Qt::LeftToRight</enum>
          </property>
          <property name="styleSheet">
-          <string notr="true">QPushButton{
-border: none;
-background-color: rgba(255, 255, 255,0);
-}</string>
+          <string notr="true"/>
          </property>
          <property name="text">
           <string/>
@@ -500,10 +526,7 @@ background-color: rgba(255, 255, 255,0);
           <enum>Qt::LeftToRight</enum>
          </property>
          <property name="styleSheet">
-          <string notr="true">QPushButton{
-border: none;
-background-color: rgba(255, 255, 255,0);
-}</string>
+          <string notr="true"/>
          </property>
          <property name="text">
           <string/>
