--- a/resources.qrc
+++ b/resources.qrc
@@ -28,5 +28,8 @@
         <file>icons/size/small.png</file>
         <file>icons/draw/circle_filled.png</file>
         <file>icons/draw/rectangle_filled.png</file>
+        <file>icons/draw/triangle.png</file>
+        <file>icons/draw/triangle_dashed.png</file>
+        <file>icons/draw/triangle_filled.png</file>
     </qresource>
 </RCC>
