--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -453,16 +453,10 @@ border: 1px solid #D6d6d6;
     <item>
      <widget class="QGroupBox" name="footerGroupBox">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>215</width>
-        <height>0</height>
-       </size>
       </property>
       <property name="styleSheet">
        <string notr="true">QGroupBox {
@@ -741,6 +735,18 @@ QToolButton::menu-indicator { image: none; }</string>
        </item>
        <item>
         <widget class="QToolButton" name="createSceneButton">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>40</width>
+           <height>40</height>
+          </size>
+         </property>
          <property name="toolTip">
           <string>Create new scene</string>
          </property>
