--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -747,6 +747,9 @@ QToolButton::menu-indicator { image: none; }</string>
            <height>40</height>
           </size>
          </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
          <property name="toolTip">
           <string>Create new scene</string>
          </property>
