--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -26,9 +26,14 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">font-family: 'Lato', sans-serif;</string>
+   <string notr="true">QWidget {
+font-family: 'Lato', sans-serif;
+}</string>
   </property>
   <widget class="QWidget" name="centralWidget">
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QGroupBox" name="headerGroupBox">
@@ -52,7 +57,8 @@ font-weight: bold;
 font-size:14px;
 border:none;
 qproperty-iconSize: 24px;
- }
+color: #00acc8;
+}
 
 QPushButton:hover, QToolButton:hover {
 border-radius: 5px;
@@ -475,6 +481,7 @@ width:40px;
 height:40px;
 border-radius: 20px;
 background-color: #f1f1f1;
+color: #00acc8;
 }
 
 QPushButton:hover, QToolButton:hover {
@@ -510,6 +517,15 @@ QToolButton::menu-indicator { image: none; }</string>
          <property name="palette">
           <palette>
            <active>
+            <colorrole role="WindowText">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>0</red>
+               <green>172</green>
+               <blue>200</blue>
+              </color>
+             </brush>
+            </colorrole>
             <colorrole role="Button">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
@@ -528,6 +544,24 @@ QToolButton::menu-indicator { image: none; }</string>
               </color>
              </brush>
             </colorrole>
+            <colorrole role="Text">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>0</red>
+               <green>172</green>
+               <blue>200</blue>
+              </color>
+             </brush>
+            </colorrole>
+            <colorrole role="ButtonText">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>0</red>
+               <green>172</green>
+               <blue>200</blue>
+              </color>
+             </brush>
+            </colorrole>
             <colorrole role="Base">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
@@ -543,11 +577,29 @@ QToolButton::menu-indicator { image: none; }</string>
                <red>241</red>
                <green>241</green>
                <blue>241</blue>
+              </color>
+             </brush>
+            </colorrole>
+            <colorrole role="PlaceholderText">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>0</red>
+               <green>172</green>
+               <blue>200</blue>
               </color>
              </brush>
             </colorrole>
            </active>
            <inactive>
+            <colorrole role="WindowText">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>0</red>
+               <green>172</green>
+               <blue>200</blue>
+              </color>
+             </brush>
+            </colorrole>
             <colorrole role="Button">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
@@ -566,6 +618,24 @@ QToolButton::menu-indicator { image: none; }</string>
               </color>
              </brush>
             </colorrole>
+            <colorrole role="Text">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>0</red>
+               <green>172</green>
+               <blue>200</blue>
+              </color>
+             </brush>
+            </colorrole>
+            <colorrole role="ButtonText">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>0</red>
+               <green>172</green>
+               <blue>200</blue>
+              </color>
+             </brush>
+            </colorrole>
             <colorrole role="Base">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
@@ -581,11 +651,29 @@ QToolButton::menu-indicator { image: none; }</string>
                <red>241</red>
                <green>241</green>
                <blue>241</blue>
+              </color>
+             </brush>
+            </colorrole>
+            <colorrole role="PlaceholderText">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>0</red>
+               <green>172</green>
+               <blue>200</blue>
               </color>
              </brush>
             </colorrole>
            </inactive>
            <disabled>
+            <colorrole role="WindowText">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>0</red>
+               <green>172</green>
+               <blue>200</blue>
+              </color>
+             </brush>
+            </colorrole>
             <colorrole role="Button">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
@@ -604,6 +692,24 @@ QToolButton::menu-indicator { image: none; }</string>
               </color>
              </brush>
             </colorrole>
+            <colorrole role="Text">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>0</red>
+               <green>172</green>
+               <blue>200</blue>
+              </color>
+             </brush>
+            </colorrole>
+            <colorrole role="ButtonText">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>0</red>
+               <green>172</green>
+               <blue>200</blue>
+              </color>
+             </brush>
+            </colorrole>
             <colorrole role="Base">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
@@ -619,6 +725,15 @@ QToolButton::menu-indicator { image: none; }</string>
                <red>241</red>
                <green>241</green>
                <blue>241</blue>
+              </color>
+             </brush>
+            </colorrole>
+            <colorrole role="PlaceholderText">
+             <brush brushstyle="SolidPattern">
+              <color alpha="255">
+               <red>0</red>
+               <green>172</green>
+               <blue>200</blue>
               </color>
              </brush>
             </colorrole>
@@ -676,7 +791,8 @@ QToolButton::menu-indicator { image: none; }</string>
           <enum>Qt::LeftToRight</enum>
          </property>
          <property name="styleSheet">
-          <string notr="true">padding: 0 10px;</string>
+          <string notr="true">padding: 0 5px;
+color: #00acc8;</string>
          </property>
          <property name="text">
           <string>1</string>
